# ai-coach

./: .env.example  .gitignore  AI_COACH_OVERVIEW.md  Makefile  README.md  REPORT.md  coach.py  config.py  main.py  pat_runner.py  pcsp_generator.py  preprocess.py  project_outline.txt  pyproject.toml  pytest.ini  requirements.txt  slides.txt
.github/workflows/: ci.yml
coach/: __init__.py  cli.py  config.py  runs.py  service.py  utils.py
coach/agent/: __init__.py  llm_client.py  planner.py  prompts.py  schemas.py
coach/analysis/: __init__.py  batch_predict.py  batch_strategy.py  experiments.py  plots.py
coach/backtest/: __init__.py  cli.py  data.py  engine.py  feature_contract.py  metrics.py  models.py
coach/data/: __init__.py  sample_matches.csv  sample_players.csv  schema.md  stats_builder.py
coach/model/: __init__.py  builder.py  params.py
coach/pat/: __init__.py  mock_pat.py  parser.py  runner.py
configs/: example_sport.json
examples/: minimal.pcsp
scripts/: build_real_data.py  pat_check.py  shuttleset_config.py  test_llm_client.py  test_redis_rotation.py  validate_inference_thresholds.py
templates/: example_model.txt  example_var.txt
tests/: conftest.py  test_build_real_data_enrichment.py  test_end_to_end_mock.py  test_fine_grained_strategy.py  test_model_builder.py  test_param_validation.py  test_pat_parser.py  test_pat_runner_error_signal.py  test_pat_runner_mock.py  test_pat_runner_mono_resolution.py  test_pat_runner_path_resolve.py  test_pat_runner_real_missing.py  test_service_optimizations.py  test_time_machine_backtest.py
(+6 files in other folders)
